# canvasgame-rust

./: Cargo.toml  README.md  canvasgame-rust.code-workspace
.github/workflows/: publish.yml
assets/: index.json
src/: assets.rs  engine.rs  lib.rs  main.rs  utils.rs  wasm_utils.rs  world.rs
src/engine/: bare.rs  mod.rs  native.rs  web.rs
src/world/: base.rs  entity.rs  level.rs  mod.rs  player.rs
www/: assets.js  bootstrap.js  index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
